--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML5 Canvas</title>
+
 </head>
 
 <body>
@@ -17,6 +18,8 @@
             margin: 0;
         }
     </style>
+
+    <script src="app.js"></script>
 
 </body>
 
